# rbi_2025

./: .gitignore  README.md
abb/abb_bridge/install/: local_setup.sh  setup.sh
abb/abb_bridge/log/: latest_build
abb/abb_ws/.devcontainer/: Dockerfile  devcontainer.json
abb/abb_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
abb/abb_ws/log/: latest_build
abb/abb_ws/src/abb_bringup/: package.xml
abb/abb_ws/src/abb_description/launch/: display.launch.xml
abb/abb_ws/src/abb_description/urdf/: irb140.urdf.xacro  irb140_description.xacro
abb/abb_ws/src/abb_gz_bringup/: CMakeLists.txt
abb/abb_ws/src/abb_gz_bringup/config/: controllers.yaml
abb/abb_ws/src/abb_gz_description/: CMakeLists.txt
abb/abb_ws/src/abb_gz_description/urdf/: irb140_description.xacro
abb/abb_ws/src/abb_gz_hardware/: CMakeLists.txt
abb/abb_ws/src/abb_hardware/: CMakeLists.txt
abb/abb_ws/src/abb_ik_solver/: setup.cfg  setup.py
abb/abb_ws/src/abb_ik_solver/abb_ik_solver/: abb_ik_solver.py  solver_tests.ipynb
abb/abb_ws/src/abb_mujoco/: setup.cfg  setup.py
abb/abb_ws/src/abb_mujoco_bringup/: CMakeLists.txt
abb/abb_ws/src/abb_mujoco_description/: CMakeLists.txt
abb/abb_ws/src/abb_mujoco_description/launch/: display.launch.xml
abb/abb_ws/src/abb_mujoco_python/: package.xml  setup.cfg  setup.py
abb/abb_ws/src/abb_mujoco_sim/: CMakeLists.txt
abb/abb_ws/src/abb_mujoco_sim/include/abb_mujoco_sim/: mujoco_sim_interface.hpp
abb/abb_ws/src/abb_mujoco_sim/src/: mujoco_sim_interface.cpp
abb/abb_ws/src/abb_path_controller/: setup.cfg  setup.py
abb/abb_ws/src/abb_path_controller/abb_path_controller/: abb_path_controller.py
abb/abb_ws/src/rbi_ABB_simulation/: package.xml  setup.py
abb/abb_ws/src/rbi_ABB_simulation/descriptions/: irb140.xacro
abb/abb_ws/src/rbi_ABB_simulation/rbi_ABB_simulation/: simulation_init.py
abb_ws/install/: local_setup.sh  setup.sh
abb_ws/install/rbi_ABB_simulation/lib/rbi_ABB_simulation/: denavit
abb_ws/install/rbi_ABB_simulation/share/rbi_ABB_simulation/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
abb_ws/log/: latest_build
abb_ws/src/rbi_ABB_simulation/: setup.cfg  setup.py
abb_ws/src/rbi_ABB_simulation/descriptions/: basic_scenario.xml
abb_ws/src/rbi_ABB_simulation/rbi_ABB_simulation/: denavit_h_demo.py  simulation_init.py
abb_ws/src/rbi_SCARA_simulation/: setup.py
abb_ws/src/rbi_SCARA_simulation/rbi_SCARA_simulation/: simulation_init.py
rov/rov_ws/: MUJOCO_LOG.TXT
rov/rov_ws/.devcontainer/: Dockerfile
rov/rov_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rov/rov_ws/log/: latest_build
rov/rov_ws/src/rov_attitude_controller/rov_attitude_controller/: rov_attitude_controller.py
rov/rov_ws/src/rov_controllers/: CMakeLists.txt  package.xml  rov_controller.xml
rov/rov_ws/src/rov_controllers/src/: rov_forward_controller.cpp
rov/rov_ws/src/rov_mujoco_bringup/: CMakeLists.txt
rov/rov_ws/src/rov_mujoco_bringup/config/: rov_controllers.yaml
rov/rov_ws/src/rov_mujoco_bringup/launch/: rov_bringup_launch.launch.xml
rov/rov_ws/src/rov_mujoco_description/: CMakeLists.txt  package.xml
rov/rov_ws/src/rov_mujoco_sim/: CMakeLists.txt  package.xml
rov/rov_ws/src/rov_mujoco_sim/description/: rov.xml
rov/rov_ws/src/rov_mujoco_sim/description/meshes/: ROV.stl
rov/rov_ws/src/rov_mujoco_sim/include/rov_sim/: mujoco_interface.hpp  mujoco_sim_interface.hpp
rov/rov_ws/src/rov_mujoco_sim/src/: example.cpp  mujoco_interface.cpp  mujoco_sim_interface.cpp
rov/rov_ws/src/rov_path_follower/: setup.cfg  setup.py
rov/rov_ws/src/rov_path_generator/: setup.cfg  setup.py
rov/rov_ws/src/rov_position_controller/: setup.cfg  setup.py
rov_ws/install/: local_setup.sh  setup.sh
rov_ws/log/: latest_build
rov_ws/src/rov_sim/: CMakeLists.txt
rov_ws/src/rov_sim/description/: basic_scenario.xml
rov_ws/src/rov_sim/include/rov_sim/: mujoco_sim_interface.hpp
rov_ws/src/rov_sim/src/: mujoco_interface.cpp  mujoco_sim_interface.cpp
scara/: README.md
scara/esp32-dev/Experimentation_Scara/: R1_data_13.csv
scara/esp32-dev/Experimentation_Scara/src/: main copy.c.txt  main.c
scara/esp32-dev/Experimentation_Scara/test_lib/: original-main.c
scara/scara_ws/.devcontainer/: Dockerfile
scara/scara_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scara/scara_ws/log/: latest_build
scara/scara_ws/src/abb_description/: CMakeLists.txt
scara/scara_ws/src/premade_path_publisher/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_bringup/: CMakeLists.txt
scara/scara_ws/src/scara_gz_bringup/: CMakeLists.txt
scara/scara_ws/src/scara_gz_description/: CMakeLists.txt
scara/scara_ws/src/scara_hardware_interface/: CMakeLists.txt  package.xml  scara_hardware_interface.xml
scara/scara_ws/src/scara_hardware_interface/include/scara_hardware_interface/: scara_hardware_interface.hpp
scara/scara_ws/src/scara_hardware_interface/src/: scara_hardware_interface.cpp
scara/scara_ws/src/scara_ik_solver/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_mujoco/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_mujoco_bringup/: CMakeLists.txt
scara/scara_ws/src/scara_mujoco_description/: CMakeLists.txt
scara/scara_ws/src/scara_mujoco_python_sim/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_mujoco_sim/: CMakeLists.txt  scara_hardware_interface.xml
scara/scara_ws/src/scara_path_controller/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_path_generator/: package.xml  setup.cfg  setup.py
scara/scara_ws/src/scara_real_bringup/: CMakeLists.txt  package.xml
scara/scara_ws/src/scara_real_description/: CMakeLists.txt
scara/scara_ws/src/scara_tf_generator/: package.xml  setup.cfg  setup.py
scara_ws/esp32-dev/Experimentation_Scara/: CMakeLists.txt  R2_data_10.csv  R2_data_15.csv  platformio.ini  python_tab.py
scara_ws/src/rbi_SCARA_simulation/: package.xml  setup.cfg  setup.py
scara_ws/src/rbi_SCARA_simulation/rbi_SCARA_simulation/: simulation_init.py
(+677 files in other folders)
